# FlashcardVoiceApp

./: README.md  pyproject.toml
flashcardvoiceapp/: main.py
