[tool.poetry]
name = "flashcardvoiceapp"
version = "0.1.0"
description = ""
authors = ["MBigaj <mikolaj.bigaj.00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
kivy = {extras = ["full"], version = "^2.2.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
